# Structa

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  build.bat  compile.bat  main.c  structa.h  structa_app.c  structa_core.h  structa_experimental.c  structa_gui.c  structa_init.c  structa_internal.c  structa_internal.h  structa_memory.c  structa_renderer.c  structa_utils.h  structa_window.c
game/: game.c  game.h  game_state.h
game/assets/: scene.gltf
include/: structa.h
modules/gltf/: gltf_module.c  gltf_module.h
modules/gui/: gui_module.c  gui_module.h
samples/: CMakeLists.txt
samples/ecs/: main.c
samples/renderable/: main.c
samples/setup/: main.c
samples/side-scroller/: components.h  game.c  game.h  main.c
samples/top-down/: game.h  main.c
shaders/: shader.vert
shared/: structa_helpers.h  structa_utils.c  structa_utils.h  structa_vk_init.c  structa_vulkan.c  structa_vulkan.h
src/: core.h  gamebase.c  gamebase.h  main.c  renderer (2).c  renderer.c  renderer.h  scene.h  structa_context.c  structa_context.h  structa_enum.h  structa_loader.h  structa_modules.c  structa_modules.h  structa_renderer.h  structa_table.h  structa_window.h  window.c  window.h
src/experimental/: main.c  platform.c  platform.h
src/gui/: gui_module.c  gui_module.h
src/shaders/: default.frag  default.vert
src/utils/: helper.c  helper.h
structa/src/: structa_context.c  structa_context.h  structa_entry.c  structa_internal.h  structa_loader.c  structa_loader.h  structa_modules.c  structa_modules.h  structa_pipeline.c  structa_pipeline.h  structa_renderer.c  structa_renderer.h  structa_window.c  structa_window.h
structa_app/: CMakeLists.txt
structa_app/src/: app.c
structa_lib/: CMakeLists.txt
structa_lib/include/: structa.h  structa_context.h  structa_core.h  structa_experimental.h  structa_gui.h  structa_renderer.h  structa_window.h
structa_lib/shaders/: gui.frag  gui.vert
structa_lib/src/: structa_components.h  structa_core.h  structa_experimental.c  structa_experimental.h  structa_internal.c  structa_internal.h  structa_renderer.c  structa_utils.c  structa_utils.h  structa_window.c
structa_lib/src/common/: utils.c  utils.h  vk_initializers.c  vk_initializers.h
structa_lib/src/core/: structa_context.c  structa_context_internal.h
structa_lib/src/core/renderer/: structa_renderer.c  structa_renderer_internal.h
structa_lib/src/core/window/: structa_window.c  structa_window_internal.h
structa_lib/src/modules/structa_gui/: structa_gui.c  structa_internal_gui.c  structa_internal_gui.h
structa_lib/src/shaders/: shader.vert
structa_lib/src/shared/: structa_helpers.h  structa_vk_init.c
structa_lib/src/systems/structa_gui/: structa_gui.h  structa_internal_gui.c
systems/structa_gui/: structa_gui.c  structa_gui.h  structa_internal_gui.c  structa_internal_gui.h
test_app/: app.c  app.h
tests/: CMakeLists.txt  test_main.c
